Fix image alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -202,3 +202,7 @@ hr {
   max-height: 600px;
   overflow-y: scroll;
 }
+
+.header--container {
+  align-items: center !important;
+}
